--- a/wiki/GeneralInfo.wiki
+++ b/wiki/GeneralInfo.wiki
@@ -8,3 +8,34 @@ The first version (actually version 3.6 - version number according to the suppor
 = Details =
 
  1. Fisrt of all download the library
+
+= Examples =
+
+== Create a bug ==
+
+The strings Email, Password, ProductName, VersionName and ComponentName have to be replaced by valid values from your bugzilla instance.
+
+
+ public static void main(String[] args) {
+    try {
+       final BugzillaClient bugzillaClient = new BugzillaClient(new URL(
+          "http://vwagwos00223:8080/bugzilla-3.6.2/"), "Email", "Password");
+          
+       if (bugzillaClient.connect()) {
+          final Bug bug = new Bug();
+          bug.setSummary("Benutzer kann einen Programmfehler melden");
+          bug.setDescription("Über den Menüpunkt Hilfe > Fehler melden kann der Nutzer einen Programmfehler an das Entwicklertem melden.");
+          bug.setProduct("ProductName");
+          bug.setVersion("VersionName");
+          bug.setComponent("ComponentName");
+          bugzillaClient.create(bug);
+          bugzillaClient.disconnect();
+       }
+    } catch (MalformedURLException e) {
+       e.printStackTrace();
+    }
+ }
+ 
+ == Query all products ==
+ 
+ final List<Product> all = client.getAll(Product.class);
