--- a/wiki/GeneralInfo.wiki
+++ b/wiki/GeneralInfo.wiki
@@ -7,27 +7,30 @@ The first version (actually version 3.6 - version number according to the suppor
 
 = Details =
 
- 1. Fisrt of all download the library
+ # First of all download the binary distribution from the download section
+ # Extract the content of the archive
+ # Place the LightningBug-API-library and the required third-party-libraries into your classpath
+ # Follow the samples below to access bugzilla
 
-= Examples =
+= Code Examples =
 
 == Create a bug ==
 
-The strings Email, Password, ProductName, VersionName and ComponentName have to be replaced by valid values from your bugzilla instance.
+The strings `email`, `password`, `product_name`, `version_name` and `component_name` have to be replaced by valid values from your bugzilla instance.
 
-
+{{{
  public static void main(String[] args) {
     try {
        final BugzillaClient bugzillaClient = new BugzillaClient(new URL(
-          "http://vwagwos00223:8080/bugzilla-3.6.2/"), "Email", "Password");
+          "http://vwagwos00223:8080/bugzilla-3.6.2/"), "email", "password");
           
        if (bugzillaClient.connect()) {
           final Bug bug = new Bug();
           bug.setSummary("Benutzer kann einen Programmfehler melden");
           bug.setDescription("Über den Menüpunkt Hilfe > Fehler melden kann der Nutzer einen Programmfehler an das Entwicklertem melden.");
-          bug.setProduct("ProductName");
-          bug.setVersion("VersionName");
-          bug.setComponent("ComponentName");
+          bug.setProduct("product_name");
+          bug.setVersion("version_name");
+          bug.setComponent("component_name");
           bugzillaClient.create(bug);
           bugzillaClient.disconnect();
        }
@@ -35,7 +38,9 @@ The strings Email, Password, ProductName, VersionName and ComponentName have to 
        e.printStackTrace();
     }
  }
- 
- == Query all products ==
- 
+}}}
+
+== Query all products ==
+{{{
  final List<Product> all = client.getAll(Product.class);
+}}}
