--- a/wiki/Local_cache.wiki
+++ b/wiki/Local_cache.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary the article describes the local cache feature
 #labels Featured,Documentation
 
 =Local Cache=
