--- a/wiki/Local_cache.wiki
+++ b/wiki/Local_cache.wiki
@@ -1,4 +1,4 @@
-#summary the article describes the local cache feature
+#summary Description of the local cache feature
 #labels Featured,Documentation
 
 =Local Cache=
