--- a/wiki/START_HERE.wiki
+++ b/wiki/START_HERE.wiki
@@ -1,12 +1,15 @@
 #summary Introduction to the LightningBugAPI
+
 = Introduction =
 
 The 2nd version (current version  4.0.1v20120822 - version number according to the supported bugzilla version plus the build date) of the API has been released. This page is meant as a brief how-to set up this stuff.
 
 = What's new? =
+
  * The API as been redesigned. The `BugzillaClient` is no longer used to query product(s) an bugs. These tasks are now performed by the `ProductService` and the `BugService` according to  the [http://www.bugzilla.org/docs/4.0/en/html/api/Bugzilla/WebService.html Bugzilla Web Service].
  * A feature called [local_cache Local Cache] will store the products configuration of a Bugzilla instance on the client. The second attempt to connect the client and query product information will use the locally stored information and significantly speed up the query
  * The creation of bugs has been temporarily disabled an will be supported again in the next version
+ * The domain objects `Version`, `TargetMilestone`, `Component` and  `Severity` have been removed. These information are now plain strings (see `Product.java`)
 
 = Setup =
 
@@ -16,6 +19,7 @@ The 2nd version (current version  4.0.1v20120822 - version number according to t
  # Follow the samples below to connect to Bugzilla and query product information or search for bugs
 
 = Code samples =
+
  # [example_connect Log in to Bugzilla]
  # [example_get_products Query product(s) configuration]
  # [example_search_bugs Search for bugs]
