Edited wiki page example_get_users through web user interface.

--- a/wiki/example_get_users.wiki
+++ b/wiki/example_get_users.wiki
@@ -4,8 +4,8 @@
 //connect to bugzilla
 final BugzillaClient client = new BugzillaClient(new URL("http://host/bugzilla-4.0.1/"), "email@host.de","password");
 
-//create the bugzilla service
-final BugzillaService service = new BugzillaService(client);
+//create the user service
+final UserService service = new UserService(client);
 
 //query the users
 final Set<User> activeUsers = service.getActiveUsers();
